--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,2 +1,6 @@
 en:
   user_activity_portfolio_title: "Portfolio"
+  thumbnail_selector:
+    select_preview_button: "Select thumbnail"
+    title: "Select the desired preview thumbnail"
+    topic_title_prefix: "Topic:"
