--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,10 @@
 en:
-  user_activity_portfolio_title: "Portfolio"
-  thumbnail_selector:
-    select_preview_button: "Select thumbnail"
-    title: "Select the desired preview thumbnail"
-    topic_title_prefix: "Topic:"
+  tlp:
+    user_activity_portfolio_title: "Portfolio"
+    thumbnail_selector:
+      select_preview_button: "Select thumbnail"
+      title: "Select the desired preview thumbnail"
+      topic_title_prefix: "Topic:"
+    user_prefs:
+      title: "Topic List Previews"
+      prefer_low_res_thumnbails: "User lower resolution thumbnails for topic lists"
